# tree-sitter-gero-asm

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-gero-asm.pc.in
bindings/c/tree_sitter/: tree-sitter-gero-asm.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gero_asm/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGeroAsmTests/: TreeSitterGeroAsmTests.swift
queries/: folds.scm  highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: addressing.txt  bank_pseudos.txt  basic.txt  casts.txt  conditional_assembly.txt  directives.txt  instructions.txt  pointers_and_vars.txt  v0_1_features.txt  v0_3_features.txt
