[package]
name = "tree-sitter-gero-asm"
description = "Parser for the Gero VM assembly language"
version = "0.1.0"
authors = ["Maxime <salty-max> Blanc <max@jellycat.fr>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "gero-asm"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/salty-max/gero_2.0/packages/asm-grammar"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
